--- a/stucampus/templates/lostAndFind/index.html
+++ b/stucampus/templates/lostAndFind/index.html
@@ -14,6 +14,6 @@
         {% for message in message_list %}
         <div class="message">{{ message.item_name }}</div>
         {% endfor %}
-        <a href="{% url 'property_office:add_message' %}">add message</a>
+        <a href="{% url 'lostAndFind:add_message' %}">add message</a>
     </body>
 </html>
