--- a/stucampus/templates/lost_and_found/add_message.html
+++ b/stucampus/templates/lost_and_found/add_message.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <a href="{% url 'lostAndFind:index' %}">index</a>
-        <form action="{% url 'lostAndFind:add_message' %}" method="POST">
+        <form action="{% url 'lostAndFind:add_message' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit"/>
