amend code style

--- a/stucampus/templates/lost_and_found/index.html
+++ b/stucampus/templates/lost_and_found/index.html
@@ -5,6 +5,9 @@
                 width: 500px;
                 height: 30px;
             }
+            .detail{
+                margin-left: 10px;
+            }
             input{
                 display: block;
             }
@@ -12,7 +15,13 @@
     </head>
     <body>
         {% for message in message_list %}
-        <div class="message">{{ message.item_name }}</div>
+        <div class="message">
+            <img src="{{ message.picture_file.url }}"/>
+            <span class="detail">{{ message.item_name }}</span>
+            <span class="detail">{{ message.place }}</span>
+            <span class="detail">{{ message.discription }}</span>
+            <span class="detail">{{ message.published_date }}</span>
+        </div>
         {% endfor %}
         <a href="{% url 'lost_and_found:add_message' %}">add message</a>
     </body>
