--- a/stucampus/templates/aboutus.html
+++ b/stucampus/templates/aboutus.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block htmlhead %}
-    <link rel="stylesheet" href="/static/styles/us.css" type="text/css" />
-    <script type="text/javascript" src="/static/scripts/us.js"></script>
+    {% load html_tools %}
+    {{ 'us.css' | as_css }}
+    {{ 'us.js' | as_js }}
 {% endblock %}
 
 {% block content %}
