--- a/stucampus/templates/account/base.html
+++ b/stucampus/templates/account/base.html
@@ -24,8 +24,8 @@
                     <li><a href="/account/profile"><img src="/static/images/account/infor.png" alt="个人资料" /><span>个人资料</span></a></li>
                     <li><a href="/account/profile/password"><img src="/static/images/account/change-infor.png" alt="修改密码" /><span>修改密码</span></a></li>
                     <li><a href="/account/profile/edit"><img src="/static/images/account/change-infor.png" alt="修改资料" /><span>修改资料</span></a></li>
-                    {% if user.masterOrganization%}
-                    <li><a href="/account/postinfor/new"><img src="/static/images/account/to-write.png" alt="发布信息" /><span>发布信息</span></a></li>
+                    {% if user.groups %}
+                    <li><a href="/organization"><img src="/static/images/account/to-write.png" alt="组织管理" /><span>组织管理</span></a></li>
                     {% endif %}
                 </ul>
             </div>
