Added create organization action.

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -17,6 +17,7 @@
     {{ 'layout.js' | as_js }}
     {{ 'google-analystics.js' | as_js }}
     {{ 'ga.js' | as_js }}
+    {{ 'style-fix.css' | as_css }}
     {{ 'base.css' | as_css }}
     {% block htmlhead %}
     {% endblock %}
