--- a/stucampus/templates/master/layout.html
+++ b/stucampus/templates/master/layout.html
@@ -6,6 +6,7 @@
 	<meta name="robots" content="noindex,nofollow" />
 	<title>深圳大学学子天地管理系统</title>
 	{% load html_tools %}
+	{{ 'base.css' | as_css }}
 	{{ 'admin/layout.css' | as_css }}
 	<!--[if IE]>{{ 'admin/ie_fix.css' | as_css }}<![endif]--> 
 	{{ 'plugins/jquery.min.js' | as_js }}
