--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -31,6 +31,7 @@
             <ul class="block_menu">
                 {% load permission_check %}
                 {% if user|is_admin %}<li><a href="/manage/status">运行状态</a></li>{% endif %}
+                {% if perms.account.org_manager_list and user|is_admin %}<li><a href="/manage/account">用户管理</a></li>{% endif %}
                 {% if perms.organization.organization_view and user|is_admin %}<li><a href="/manage/organization">组织管理</a></li>{% endif %}
                 {% if perms.magazine.magazine_manage and user|is_admin %}<li><a href="/manage/magazines">杂志管理</a></li>{% endif %}
                 {% if perms.news.news_post and user|is_admin %}<li><a href="#">新闻发布</a></li>{% endif %}
