--- a/stucampus/templates/master/accounts.html
+++ b/stucampus/templates/master/accounts.html
@@ -2,8 +2,8 @@
 
 {% block htmlhead %}
 {% load html_tools %}
-{{ 'admin/join.css' | as_css }}
-{{ 'admin/join-delete.js' | as_js }}
+{{ 'admin/account.css' | as_css }}
+{{ 'admin/account.js' | as_js }}
 <!--[if IE 6]>
 <style>
 ul li div{
@@ -14,23 +14,28 @@ ul li div{
 {% endblock %}
 
 {% block content %}
-    <h2>用户列表  &amp; Accounts</h2>
+    <h2>用户管理  &amp; Manage Account</h2>
     <ul>
         <li>
-            <div style="width:12%">邮箱</div>
-            <div style="width:22%">昵称</div>
-            <div style="width:22%">学院</div>
-            <div style="width:13%">删除</div>
+            <div style="width:20%">邮箱</div>
+            <div style="width:15%">姓名</div>
+            <div style="width:15%">昵称</div>
+            <div style="width:15%">学院</div>
+            <div style="width:10%">状态</div>
+            <div style="width:10%">操作</div>
         </li>
+        {% load account_custom %}
         {% for stu in students %}
             <li>
-                <a href="/join/{{stu.id}}" target="_blank">
-                    <div style="width:12%">{{ stu.email }}</div>
-                    <div style="width:22%">{{ stu.created|date("Y-m-d H:i:s") }}</div>
-                    <div style="width:7%">{{stu.gender}}</div>
-                </a>
-                <div style="width:13%">
-                    <input type="button" class="listinput btn" name="prevent" value="删除报名" onclick="confirm('确实要删除该报名吗？')?$S.JoinForm.remove({{stu.id}}):false" />
+            <a href="/manage/account/{{stu.id}}">
+                <div style="width:20%">{{ stu.user.email }}</div>
+                <div style="width:15%">{{ stu.true_name | default:'暂无'}}</div>
+                <div style="width:15%">{{ stu.screen_name }}</div>
+                <div style="width:15%">{{ stu | get_college_name }}</div>
+                <div style="width:10%">{{ stu | get_student_status }}</div>
+            </a>
+                <div style="width:10%">
+                    <a href="javascript:void(0)" onclick="$S.Account.remove({{stu.id}})">删除</a> | <a href="javascript:void(0)" onclick="$S.Account.ban({{stu.id}})">禁用</a>
                 </div>
             </li>
 
@@ -38,35 +43,5 @@ ul li div{
         {% endfor %}
     </ul>
     <div id="pageline">
-{#  {% if pages != 1 %}
-        {% if page != 1  %}
-            <a href="/admin/join/page/1">首页</a>
-            <a href="/admin/join/page/{{page-1}}">上一页</a>
-        {%endif%}
-        {% if page%pagesize==0 %}
-            {% set lp = pages %}
-        {% else %}
-            {% set lp = pages+1 %}
-        {%endif%}
-        {% for i in range(1,pages) %}
-            <a href="/admin/join/page/{{i}}">{{i}}</a>
-        {% endfor %}
-        {% if page < pages %}
-            <a href="/admin/join/page/{{page+1}}">下一页</a>
-            <a href="/admin/join/page/{{pages}}">末页</a> 
-        {% endif %}
-    {% endif %} 
-#}
-        <a href="/admin/join/page/1">首页</a>
-        {% if pagination['previous']!=null %}
-            <a href="/admin/join/page/{{pagination.previous}}">上一页</a>
-        {% endif %}
-        {% for i in range(1,pagination.allpage) %}
-            <a href="/admin/join/page/{{i}}">{{i}}</a>
-        {% endfor %}
-        {% if pagination['next']!=null %}
-            <a href="/admin/join/page/{{pagination.next}}">下一页</a>
-        {% endif %}
-        <a href="/admin/join/page/{{pagination.end}}">末页</a>        <span>共有{{pagination.count}}人报名</span>
     </div>
 {% endblock %}
