--- a/stucampus/templates/account/base.html
+++ b/stucampus/templates/account/base.html
@@ -18,6 +18,7 @@
         <div class="left-side">
             <img id="left-top" src="/static/images/account/left-side.png" alt="左侧上块" />
             {% load account_custom %}
+            {% load permission_check %}
             <img id="avater" src="http://www.gravatar.com/avatar/{{ user|user_avatar }}?s=164" alt="用户头像" />
             <div class="list">
                 <ul>
