--- a/stucampus/templates/lecture/index.html
+++ b/stucampus/templates/lecture/index.html
@@ -3,6 +3,7 @@
     </head>
     <body>
         <table border="1">
+            <div>{{ empty }}</div>
             <tr>
             {% for list_each_day in table.morning %}
                 <td>
