Refactor js codes.

--- a/stucampus/templates/master/infor_post.html
+++ b/stucampus/templates/master/infor_post.html
@@ -4,7 +4,7 @@
     {% load html_tools %}
     {{ 'plugins/ckeditor/ckeditor.js' | as_js }}
     {{ 'plugins/ckeditor/adapters/jquery.js' | as_js }}
-    {{ 'admin/infor_article.js' | as_js }}
+    {{ 'admin/inforArticle.js' | as_js }}
     {{ 'admin/infor_article.css' | as_css }}
 {% endblock %}
 
