--- a/stucampus/templates/organization/edit.html
+++ b/stucampus/templates/organization/edit.html
@@ -3,7 +3,7 @@
 {% block htmlhead %}
 {% load html_tools %}
 {{ 'admin/organization.css' | as_css }}
-{{ 'admin/org_manage.js' | as_js }}
+{{ 'admin/orgManage.js' | as_js }}
 <!--[if IE 6]>
 <style>
 ul li div{
