--- a/stucampus/templates/infor/list.html
+++ b/stucampus/templates/infor/list.html
@@ -3,7 +3,7 @@
 
 {% block htmlhead %}
 {% load html_tools %}
-    {{ 'infor/infor_center.css' | as_css }}
+    {{ 'infor/infor-center.css' | as_css }}
 {% endblock %}
 
 {% block content %}
