--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -8,7 +8,7 @@
     {% load html_tools %}
     {{ 'base.css' | as_css }}
     {{ 'admin/layout.css' | as_css }}
-    <!--[if IE]>{{ 'admin/ie_fix.css' | as_css }}<![endif]--> 
+    <!--[if IE]>{{ 'admin/ie-fix.css' | as_css }}<![endif]--> 
     {{ 'plugins/jquery.min.js' | as_js }}
     {{ 'global.js' | as_js }}
     {{ 'admin/global.js' | as_js }}
